Fix footer icons not being visible
Some images with transparent background need to have a white background,
so I added a rule for dark mode clients, but this made the footer icons
invisible.

--- a/static/main.css
+++ b/static/main.css
@@ -49,7 +49,7 @@ main {
         color: #fff;
     }
 
-    img {
+    main img {
         background-color: #fff;
     }
 }
